--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
     <div class="row">
         <div class="column">
             <h2 style="font-weight: bold;margin-top: 0px;"><a href="{{ site.url }}/about">about me</a></h2>
-            <p>Engineering Graduate Batch of 2020 in electronics and commn., Seeking Backend Development Responsibilities<br></p>
+            <p>Engineering Graduate Batch of 2020 in electronics and commn., Seeking Responsibilities in Development, Ops and Security<br></p>
         </div>
         <div class="column">
             <h2 style="font-weight: bold;margin-top: 0px;"><a href="{{ site.url }}/projects">M.O.</a></h2>
