M.O. and about update

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,11 +15,11 @@ layout: default
     <div class="row">
         <div class="column">
             <h2 style="font-weight: bold;margin-top: 0px;"><a href="{{ site.url }}/about">about me</a></h2>
-            <p>Engineering Graduate Batch of 2020 in electronics and commn., Seeking Responsibilities in Development using Python<br></p>
+            <p>electronics and communication engineering graduate<!--, Batch of 2020-->, seeking responsibilities in Python development<br></p>
         </div>
         <div class="column">
             <h2 style="font-weight: bold;margin-top: 0px;"><a href="{{ site.url }}/projects">M.O.</a></h2>
-            <p>I like to solve puzzles and keep working on it. I love making extensive research and gaining further intel.</p>
+            <p>plan, execute, test, verify, repeat. working for the best solution possible to keep clients coming back for more</p>
         </div>
     </div>
     <hr style="margin-top: 0px;">
