--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,8 +18,8 @@ layout: default
             <p>electronics and communication engineering graduate<!--, Batch of 2020-->, seeking responsibilities in Python development<br></p>
         </div>
         <div class="column">
-            <h2 style="font-weight: bold;margin-top: 0px;"><a href="{{ site.url }}/projects">M.O.</a></h2>
-            <p>plan, execute, test, verify, repeat. working for the best solution possible to keep clients coming back for more</p>
+            <h2 style="font-weight: bold;margin-top: 0px;"><a href="{{ site.url }}/projects">my writings</a></h2>
+            <p>mostly about the things I've done. <br>some are just thoughts and ideas</p>
         </div>
     </div>
     <hr style="margin-top: 0px;">
